[package]
name = "arbitrage_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
async-stream = "0.3"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "time"] }
base64 = "0.22"
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
zstd = "0.12"
borsh = "1.5.7"
tokio-tungstenite = "0.20.1"
url = "2.5.7"
chrono = "0.4.42"
