[package]
name = "arbitrage_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
async-stream = "0.3"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
url = "2.5.7"
chrono = "0.4.42"
base64 = "0.22"
